# fiap-dep-payments-pipeline

./: .gitignore  MANIFEST.in  README.md  comments.txt  main.py  pyproject.toml  requirements.md  requirements.txt  script.py
config/: app_config.py  functions.py  settings.yaml
scripts/: setup_datasets.sh
src/: sales.py
src/business/: columns.py  sales_report.py  sales_report_2025.py  schemas.py
src/config/: schemas.py  settings.py
src/io/: data_io.py
src/layers/apigit_to_bronze/: schemas.py  task.py
src/pipeline/: pipeline.py
src/session/: spark_session_manager.py
src/spark/: sales.py  spark_session_manager.py
tests/: conftest.py  test_business_requirements.py  test_format_oupput.py  test_format_output.py  test_transformations.py
